# veridian

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  install-veridian.sh  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/: RELEASE_EVIDENCE_TEMPLATE.md  pull_request_template.md
.github/workflows/: adapter-certification.yml  ip-protection.yml  publish.yml  release-gates.yml  test.yml
examples/: SUMMARY.md
examples/01_ai_code_deploy/: README.md  solution.py  test_solution.py
examples/02_runaway_costs/: README.md  solution.py  test_solution.py
examples/03_hallucinated_evidence/: README.md  pipeline.py  solution.py  test_pipeline.py  test_solution.py
examples/04_healthcare_misdiagnosis/: README.md  solution.py  test_solution.py
examples/05_financial_cascade/: README.md  solution.py  test_solution.py
examples/06_eu_ai_act/: README.md  solution.py  test_solution.py
examples/07_pilot_failure/: README.md  solution.py  test_solution.py
examples/08_deleted_databases/: README.md  pipeline.py  solution.py  test_pipeline.py  test_solution.py
examples/09_prm_policy_repair/: README.md  demo.py
examples/10_deploy_gatekeeper/: README.md
examples/11_soc_incident_containment/: README.md
examples/12_wire_fraud_release_review/: README.md  RESEARCH.md  normal_payment.json  pipeline.py  sanctioned_beneficiary.json  suspicious_payment.json  test_pipeline.py
examples/drift-detection/: README.md  run_drift_demo.py
examples/p6_aml_kyc_investigation/: README.md  p6_aml_kyc.py  sample_alerts.json
examples/p9_crash_recovery/: README.md  p9_crash_recovery.py
examples/skill-optimization/: EXPERIMENTS.md  run_all_experiments.py
scripts/: check_protected_paths.py
tests/: test_checkpoint.py  test_consensus.py  test_knowledge_graph.py  test_pipeline.py  test_saga.py
tests/integration/: test_activity_journal_runner.py  test_backend_parity.py  test_certification_matrix.py  test_checkpoint_cursor_resume.py  test_cli_new_project_smoke.py  test_crewai_adapter.py  test_crewai_certification.py  test_graph_semantics.py  test_langgraph_adapter.py  test_langgraph_certification.py  test_parallel_parity.py  test_pause_resume.py  test_plugin_lifecycle.py  test_prm_record_replay.py  test_replay_cli.py  test_replay_compat_runner.py  test_runner.py  test_subgraph.py  test_tenant_isolation.py
tests/stress/: conftest.py  test_crash_recovery.py
tests/unit/: test_activity_boundary.py  test_activity_journal.py  test_adaptive_safety.py  test_adversarial_eval.py  test_adversarial_framework.py  test_agents.py  test_alerts.py  test_anomaly_detector.py  test_api_stability.py  test_async_scheduler.py  test_behavioral_fingerprint.py  test_blast_radius.py  test_boundary_fluidity.py  test_budget.py  test_canary.py  test_checkpoint_cursor.py  test_circuit_breaker.py  test_cli.py  test_compliance_report.py  test_context.py  test_cost.py  test_cot_audit.py  test_cross_agent_chain.py  test_crypto_trail.py  test_dashboard_data.py  test_decorator.py  test_deprecation_warnings.py  test_dlq_runner.py  test_drift_detector.py  test_embedding_grounding.py  test_entropy_gc.py  test_eu_ai_act.py  test_evolution_monitor.py  test_evolution_sandbox.py  test_explain.py  test_fault_injector.py  test_federated_trust.py  test_gh_action.py  test_graph_state.py  test_handoff.py  (+57 more)
veridian/: __init__.py  benchmark.py  budget.py  cost.py  decorator.py  experimental.py  gh_action.py
veridian/__pycache__/: benchmark.cpython-314.pyc.1634650369008
veridian/agents/: __init__.py  base.py  handoff.py  initializer.py  reviewer.py  worker.py
veridian/audit/: __init__.py  crypto_trail.py
veridian/cli/: __init__.py  dlq.py  main.py  replay.py
veridian/compliance/: __init__.py  eu_ai_act.py  models.py
veridian/context/: __init__.py  compactor.py  manager.py  window.py
veridian/contracts/: __init__.py  hook.py  prm_policy.py  sprint.py  verifier.py
veridian/core/: __init__.py  api_surface.py  checkpoint.py  config.py  dlq.py  events.py  exceptions.py  quality_gate.py  saga.py  task.py
veridian/dashboard/: __init__.py  data_layer.py  share_report.py
veridian/entropy/: __init__.py  gc.py
veridian/eval/: __init__.py  adversarial.py  attack_framework.py  calibration.py  canary.py  comparator.py  pipeline.py  reliability.py  sandbox.py  sprint_contract.py
veridian/explain/: __init__.py  engine.py
veridian/graph/: __init__.py  executor.py  state.py  superstep.py  verified_edge.py
veridian/hooks/: __init__.py  base.py  registry.py
veridian/identity/: __init__.py  models.py  pki.py
veridian/integrations/: __init__.py  certification.py  crewai.py  langgraph.py  sdk.py  subgraph.py  tenancy.py  universal.py
veridian/intelligence/: __init__.py  self_improving.py
veridian/knowledge/: __init__.py  graph.py  loader.py  models.py
veridian/ledger/: __init__.py  ledger.py
veridian/loop/: __init__.py  activity.py  activity_boundary.py  checkpoint_cursor.py  parallel_runner.py  replay_compat.py  runner.py  runtime_store.py  scheduler.py  trusted_executor.py
veridian/mcp/: __init__.py  server.py  trust.py
veridian/observability/: __init__.py  alerts.py  compliance_report.py  cot_audit.py  cross_agent_chain.py  dashboard.py  ingest.py  otlp_exporter.py  proof_chain.py  retention.py  slo.py  tracer.py
veridian/operator/: __init__.py  approvals.py  dlq_triage.py  replay.py  runbooks.py  timeline.py
veridian/plugins/: __init__.py  certification.py  marketplace.py  registry.py  sdk.py
veridian/policy/: __init__.py  compiler.py  engine.py  models.py  nl_interface.py
veridian/protocols/: __init__.py  safe_evolution.py
veridian/providers/: __init__.py  base.py  litellm_provider.py  mock_provider.py
veridian/secrets/: __init__.py  base.py  env_provider.py  pii_policy.py  trace_filter.py
veridian/skills/: __init__.py  admission.py  blast_radius.py  extractor.py  library.py  models.py  quarantine.py  store.py
veridian/storage/: __init__.py  base.py  local_json.py  postgres_backend.py  redis_backend.py  (+1 more)
(+97 files in other folders)
