[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veridian-ai"
version = "0.1.0"
description = "Production-grade infrastructure for reliable long-running AI agents — verified, crash-safe, observable."
authors = [{ name = "Veridian contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ai", "agents", "llm", "autonomous", "verification",
    "orchestration", "long-running", "reliable", "production",
    "task-ledger", "crash-safe",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

dependencies = [
    # Data validation
    "pydantic>=2.5",
    # Resilience — retry + backoff
    "tenacity>=9.0",
    # Cross-process file locking for atomic ledger writes
    "filelock>=3.13",
    # CLI & terminal output
    "rich>=13.7",
    "typer>=0.12",
    # HTTP (HttpStatusVerifier, SlackNotifyHook)
    "httpx>=0.27",
    # PDF parsing (QuoteMatchVerifier)
    "pypdf>=4.3",
    # Token counting
    "tiktoken>=0.7",
    # Environment config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
redis    = ["redis>=5.0"]
postgres = ["asyncpg>=0.29", "sqlalchemy[asyncio]>=2.0"]
otel     = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-semantic-conventions>=0.46b0",
]
llm = [
    "litellm>=1.55.0",
    "anthropic>=0.45.0",
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
langfuse = ["langfuse>=2.30"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "faker>=25.0",
]
all = ["veridian[llm,dashboard,redis,postgres,otel,langfuse]"]

[project.scripts]
veridian = "veridian.cli.main:app"

# Third-party verifiers auto-discovered at import time via this entry point.
# In your package's pyproject.toml:
#   [project.entry-points."veridian.verifiers"]
#   my_verifier = "my_package.verifiers:MyVerifier"
[project.entry-points."veridian.verifiers"]
bash_exit    = "veridian.verify.builtin.bash:BashExitCodeVerifier"
quote_match  = "veridian.verify.builtin.quote:QuoteMatchVerifier"
schema       = "veridian.verify.builtin.schema:SchemaVerifier"
http_status  = "veridian.verify.builtin.http:HttpStatusVerifier"
file_exists  = "veridian.verify.builtin.file_exists:FileExistsVerifier"
composite    = "veridian.verify.builtin.composite:CompositeVerifier"
any_of       = "veridian.verify.builtin.any_of:AnyOfVerifier"
llm_judge    = "veridian.verify.builtin.llm_judge:LLMJudgeVerifier"
semantic_grounding = "veridian.verify.builtin.semantic_grounding:SemanticGroundingVerifier"
self_consistency   = "veridian.verify.builtin.confidence:SelfConsistencyVerifier"

# Third-party hooks auto-discovered via this entry point.
[project.entry-points."veridian.hooks"]

# Storage backends auto-discovered via this entry point.
[project.entry-points."veridian.storage"]
local_json = "veridian.storage.local_json:LocalJSONStorage"

[tool.hatch.build.targets.wheel]
packages = ["veridian"]

[project.urls]
Homepage      = "https://github.com/AV-CSE31/veridian"
Repository    = "https://github.com/AV-CSE31/veridian"
Changelog     = "https://github.com/AV-CSE31/veridian/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/AV-CSE31/veridian/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastAPI's dynamic @app.get() decorators are not typed in the stubs;
# disabling this check only for the dashboard avoids version-skew between
# mypy releases that use [misc] vs [untyped-decorator] for the same error.
module = "veridian.observability.dashboard"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.hatch.version]
path = "veridian/__init__.py"

[tool.coverage.run]
source = ["veridian"]
omit = [
    "veridian/cli/*",
    "tests/*",
    # Optional backends require external services (Redis, Postgres, FastAPI/uvicorn)
    # These are covered by integration tests that need running service dependencies.
    "veridian/storage/redis_backend.py",
    "veridian/storage/postgres_backend.py",
    "veridian/observability/dashboard.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
