[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veridian-ai"
version = "0.2.0"
description = "Production-grade infrastructure for reliable long-running AI agents — verified, crash-safe, observable."
authors = [{ name = "Veridian contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ai", "agents", "llm", "autonomous", "verification",
    "orchestration", "long-running", "reliable", "production",
    "task-ledger", "crash-safe",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

dependencies = [
    # Data validation
    "pydantic>=2.5",
    # Resilience — retry + backoff
    "tenacity>=9.0",
    # Cross-process file locking for atomic ledger writes
    "filelock>=3.13",
    # CLI & terminal output
    "rich>=13.7",
    "typer>=0.12",
    # HTTP (HttpStatusVerifier, SlackNotifyHook)
    "httpx>=0.27",
    # PDF parsing (QuoteMatchVerifier)
    "pypdf>=4.3",
    # Token counting
    "tiktoken>=0.7",
    # Knowledge graph
    "networkx>=3.2",
    # Agent identity (Ed25519)
    "cryptography>=42.0",
]

[project.optional-dependencies]
redis    = ["redis>=5.0"]
postgres = ["psycopg2>=2.9"]
otel     = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-semantic-conventions>=0.46b0",
]
llm = [
    "litellm>=1.55.0",
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = ["veridian[llm,dashboard,redis,postgres,otel]"]

[project.scripts]
veridian = "veridian.cli.main:app"

# Third-party verifiers auto-discovered at import time via this entry point.
# In your package's pyproject.toml:
#   [project.entry-points."veridian.verifiers"]
#   my_verifier = "my_package.verifiers:MyVerifier"
[project.entry-points."veridian.verifiers"]
bash_exit    = "veridian.verify.builtin.bash:BashExitCodeVerifier"
quote_match  = "veridian.verify.builtin.quote:QuoteMatchVerifier"
schema       = "veridian.verify.builtin.schema:SchemaVerifier"
http_status  = "veridian.verify.builtin.http:HttpStatusVerifier"
file_exists  = "veridian.verify.builtin.file_exists:FileExistsVerifier"
composite    = "veridian.verify.builtin.composite:CompositeVerifier"
any_of       = "veridian.verify.builtin.any_of:AnyOfVerifier"
llm_judge    = "veridian.verify.builtin.llm_judge:LLMJudgeVerifier"
semantic_grounding = "veridian.verify.builtin.semantic_grounding:SemanticGroundingVerifier"
self_consistency   = "veridian.verify.builtin.confidence:SelfConsistencyVerifier"
embedding_grounding = "veridian.verify.builtin.embedding_grounding:EmbeddingGroundingVerifier"
tool_safety         = "veridian.verify.builtin.tool_safety:ToolSafetyVerifier"
memory_integrity    = "veridian.verify.builtin.memory_integrity:MemoryIntegrityVerifier"

# Third-party hooks auto-discovered via this entry point.
[project.entry-points."veridian.hooks"]
evolution_monitor      = "veridian.hooks.builtin.evolution_monitor:EvolutionMonitorHook"
behavioral_fingerprint = "veridian.hooks.builtin.behavioral_fingerprint:BehavioralFingerprintHook"
identity_guard         = "veridian.hooks.builtin.identity_guard:IdentityGuardHook"
adaptive_safety        = "veridian.hooks.builtin.adaptive_safety:AdaptiveSafetyHook"
anomaly_detector       = "veridian.hooks.builtin.anomaly_detector:AnomalyDetectorHook"

# Secrets providers auto-discovered via this entry point.
[project.entry-points."veridian.secrets"]
env = "veridian.secrets.env_provider:EnvSecretsProvider"

# Storage backends auto-discovered via this entry point.
[project.entry-points."veridian.storage"]
local_json = "veridian.storage.local_json:LocalJSONStorage"

[tool.hatch.build.targets.wheel]
packages = ["veridian"]

[project.urls]
Homepage      = "https://github.com/AV-CSE31/veridian"
Repository    = "https://github.com/AV-CSE31/veridian"
Changelog     = "https://github.com/AV-CSE31/veridian/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/AV-CSE31/veridian/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501", "B905"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastAPI's dynamic @app.get() decorators are not typed in the stubs;
# disabling this check only for the dashboard avoids version-skew between
# mypy releases that use [misc] vs [untyped-decorator] for the same error.
module = "veridian.observability.dashboard"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q --import-mode=importlib"

[tool.hatch.version]
path = "veridian/__init__.py"

[tool.coverage.run]
source = ["veridian"]
omit = [
    "veridian/cli/*",
    "tests/*",
    # Optional backends require external services (Redis, Postgres, FastAPI/uvicorn)
    # These are covered by integration tests that need running service dependencies.
    "veridian/storage/redis_backend.py",
    "veridian/storage/postgres_backend.py",
    "veridian/observability/dashboard.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
